gke-infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-project-chaos
  annotations:
    # //earlier,I created static ip with this name:
    # gcloud compute addresses create oauth-app-ip --global
    kubernetes.io/ingress.global-static-ip-name: "oauth-app-ip"
    networking.gke.io/managed-certificates: "my-manged-ssl-certificate"
    kubernetes.io/ingress.allow-http: "false"
    helm.sh/resource-policy: keep
spec:
  rules:
  - host: theprojectchaos.com 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: project-chaos-backend-clusterip-svc
            port:
              number: 80
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: project-chaos-backend-clusterip-svc
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: project-chaos-backend-clusterip-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-chaos-frontend-node-port
            port:
              number: 80
